--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.3.3",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.2"
