--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "style-resources-loader": "^1.3.3",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "wavesurfer.js": "^3.3.1"
   },
   "eslintConfig": {
     "root": true,
