--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.2",
-    "wavesurfer.js": "^3.3.1"
+    "wavesurfer.js": "https://github.com/aimkiray/wavesurfer.js.git"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
