--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@moefe/vue-aplayer": "^2.0.0-beta.5",
+    "@moefe/vue-aplayer": "https://github.com/aimkiray/vue-aplayer.git",
     "argon": "^2.0.21",
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
+    "node-sass": "^4.13.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.2",
@@ -25,7 +26,6 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.3",
     "vue-template-compiler": "^2.6.10"
