--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
+    "highlight.js": "^9.18.1",
+    "marked": "^0.8.2",
     "node-sass": "^4.13.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.6",
